<resources>
    <string name="app_name">product_api</string>
    <string name="product_name">Product Name</string>
    <string name="danh_s_ch_s_n_ph_m">Danh sách sản phẩm</string>
    <string name="th_m_s_n_ph_m_m_i">Thêm sản phẩm mới</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="th_ng_tin_chi_ti_t_s_n_ph_m">Thông tin chi tiết sản phẩm</string>
    <string name="c_p_nh_p_s_n_ph_m">Cập nhập sản phẩm</string>
    <string name="price">Price</string>
    <string name="desc">desc</string>
    <string name="xem_th_m">xem thêm</string>
</resources>